--- a/src/RentalWorksWebApi/WebpackReports/src/Reports/OrderReports/OrderReport/index.scss
+++ b/src/RentalWorksWebApi/WebpackReports/src/Reports/OrderReports/OrderReport/index.scss
@@ -6,6 +6,7 @@ tbody {
 
     td {
         padding: 3px;
+        vertical-align: top;
     }
 }
 
